--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@liveblocks/client": "^2.0.5",
-    "@liveblocks/react": "^2.0.5",
-    "@liveblocks/react-comments": "^1.12.0",
+    "@liveblocks/client": "^1.9.7",
+    "@liveblocks/react": "^1.9.7",
+    "@liveblocks/react-comments": "^1.9.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fabric": "^5.3.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "react": "^18",
